@@ -1,3 +1,6 @@
+2005-10-10  Jeremy Cribb <jcribb@email.unc.edu>
+	* mip.m: added documentation about the "stride" parameter.
+
 2005-09-16  Jeremy Cribb <jcribb@email.unc.edu>
   * mip.m: changed comments.
 
